[package]
name = "hqcli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
chrono = "0.4.31"
clap = { version = "4.4.8", features = ["derive"] }
dirs = "5.0.1"
env_logger = "0.10.1"
figment = { version = "0.10.12", features = ["yaml", "toml", "json", "env"] }
headless_chrome = { version = "1.0.8", features = ["rustls"] }
humantime = "2.1.0"
inquire = "0.6.2"
log = "0.4.20"
parse_duration = "2.1.1"
serde = { version = "1.0.192", features = ["derive"] }
